improved login and registration page

--- a/nexus9k/templates/qa/questions.html
+++ b/nexus9k/templates/qa/questions.html
@@ -1,14 +1,12 @@
-{% extends "base.html" %}
+{% extends "bootstrap_base.html" %}
 
 {% load staticfiles %}
 
 
-{% block site-title %}Scripts{% endblock %}
+{% block site-title %}Q & A{% endblock %}
 
 {% block content %}
     <div id="content">
-    <link rel="stylesheet" href="{% static 'css/site.css' %}">
-    <link rel="stylesheet" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %}">
     <div class="container">
     <div class="row">
     <!--left panel-->
