--- a/nexus9k/templates/registration/login.html
+++ b/nexus9k/templates/registration/login.html
@@ -1,27 +1,15 @@
-{% load staticfiles %}<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
+{% extends "bootstrap_base.html" %}
+{% block site-title %}Login{% endblock %}
 
-    <meta name="robots" content="noindex, nofollow">
-    <meta name="description" content="{% block meta-description %}{% endblock %}">
+{% block header %}
+  {% include "registration/header.html" %}
+{% endblock header %}
+{% block footer %}{% endblock footer %}
 
-    <title>{% block site-title %}Login{% endblock %} - Cisco Nexus 9000 Series Community</title>
+{% block content %}
 
-    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400|Lato|Hind|Noto+Sans|Source+Sans+Pro|Rosario|Open+Sans">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %}">
-
-    <link rel="stylesheet" href="{% static 'css/site.css' %}">
-  </head>
-  <body class="main-content">
     <div id="content" class="text-center">
 
-      <a id="logo-lg" href="{% url 'home' %}"><img src="{{STATIC_URL}}img/cisco-logo-dark.png"/> </a>
-    <div class="well well-transparent">
-        <div id="logo-text">Cisco Nexus 9000 Community.</div>
-    </div>
     <div class="row">
         <div class="col-xs-12 col-md-6 col-md-offset-3 ">
             <div class="panel panel-default">
@@ -62,7 +50,8 @@
                                         </button>
                                     </div>
                                     <div class="form-group">
-{#                                    <a href="{% url 'password_reset' %}">Forgot Password?</a>#}
+                                    <a href="">Forgot Password?</a> |
+                                    <a href="{% url 'register' %}">Register</a>
                                     </div>
                                 </div>
                             </div>
@@ -77,7 +66,5 @@
         </div>
     </div>
 </div>
-    <script type="text/javascript" src="{% static 'bower_components/jquery/dist/jquery.min.js'%}"></script>
-    <script type="text/javascript" src="{% static 'bower_components/bootstrap/dist/js/bootstrap.min.js'%}"></script>
-  </body>
-</html>
+
+{% endblock content %}
