--- a/nexus9k/templates/qa/question.html
+++ b/nexus9k/templates/qa/question.html
@@ -11,30 +11,33 @@
 
     <div class="row">
       <div class="col-md-9 col-sm-12">
-
-        <h3>Nexus 9000 quick deploy</h3>
-
         <div class="row">
-          <div class="col-md-8">
-            <h5>
-              <span class="label label-default">question</span>
-              <span class="label label-default">general</span>
-              <span class="label label-default">tech</span>
-            </h5>
+          <div class="col-xs-1 text-center">
+            <div class="row">
+              <div class="col-md-12"><span class="glyphicon glyphicon-chevron-up glyphicon-big"></span></div>
+            </div>
+            <div class="row">
+              <div class="col-md-12"><span class=""><h4>5</h4></span></div>
+            </div>
+            <div class="row">
+              <div class="col-md-12"><span class="glyphicon glyphicon-chevron-down glyphicon-big"></span></div>
+            </div>
           </div>
-          <div class="col-md-4">
-            <div class="btn-group" role="group" aria-label="...">
-              <button type="button" class="btn btn-success">
-                <span class="glyphicon glyphicon-thumbs-up"></span> Vote Up
-              </button>
-              <button type="button" class="btn btn-default" disabled>5</button>
-              <button type="button" class="btn btn-danger">
-                <span class="glyphicon glyphicon-thumbs-down"></span>Vote Down
-              </button>
+          <div class="col-xs-11">
+            <h3>Nexus 9000 quick deploy</h3>
+
+            <div class="row">
+              <div class="col-md-8">
+                <h5>
+                  <span class="label label-default">question</span>
+                  <span class="label label-default">general</span>
+                  <span class="label label-default">tech</span>
+                </h5>
+              </div>
+
             </div>
           </div>
         </div>
-
         <hr>
         <br/>
 
@@ -63,30 +66,103 @@
         def greet(name):
           print 'hello', name
       </pre>
-        <div class="col-md-12">
-          <div class="row"><h3>Comments</h3></div>
-          <div class="list-group row blockelement">
-            <a href="#" class="list-group-item">
-              Dapibus ac facilisis in
-              <span class="text-muted pull-right"><span class="glyphicon glyphicon-user"></span> Jane Doe (Friday, 17 April 2015)</span>
-            </a>
-            <a href="#" class="list-group-item">
-              Morbi leo risus
-              <span class="text-muted pull-right"><span class="glyphicon glyphicon-user"></span> Jane Doe (Friday, 17 April 2015)</span>
-            </a>
-            <a href="#" class="list-group-item">
-              Porta ac consectetur ac
-              <span class="text-muted pull-right"><span class="glyphicon glyphicon-user"></span> Jane Doe (Friday, 17 April 2015)</span>
-            </a>
-            <a href="#" class="list-group-item">
-              Vestibulum at eros
-              <span class="text-muted pull-right"><span class="glyphicon glyphicon-user"></span> Jane Doe (Friday, 17 April 2015)</span>
-            </a>
+
+        <div class="row">
+          <div class="col-md-12">
+            <div class="row"><h3>Comments</h3></div>
+            <div class="list-group row blockelement">
+              <a href="#" class="list-group-item">
+                Dapibus ac facilisis in
+                <span class="text-muted pull-right"><span class="glyphicon glyphicon-user"></span> Jane Doe (Friday, 17 April 2015)</span>
+              </a>
+              <a href="#" class="list-group-item">
+                Morbi leo risus
+                <span class="text-muted pull-right"><span class="glyphicon glyphicon-user"></span> Jane Doe (Friday, 17 April 2015)</span>
+              </a>
+              <a href="#" class="list-group-item">
+                Porta ac consectetur ac
+                <span class="text-muted pull-right"><span class="glyphicon glyphicon-user"></span> Jane Doe (Friday, 17 April 2015)</span>
+              </a>
+              <a href="#" class="list-group-item">
+                Vestibulum at eros
+                <span class="text-muted pull-right"><span class="glyphicon glyphicon-user"></span> Jane Doe (Friday, 17 April 2015)</span>
+              </a>
+            </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="row">
+              <div class="col-xs-12">
+                <h3>Answers</h3>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-1 text-center">
+                <div class="row">
+                  <div class="col-md-12"><span class="glyphicon glyphicon-chevron-up glyphicon-big"></span></div>
+                </div>
+                <div class="row">
+                  <div class="col-md-12"><span class=""><h4>5</h4></span></div>
+                </div>
+                <div class="row">
+                  <div class="col-md-12"><span class="glyphicon glyphicon-chevron-down glyphicon-big"></span></div>
+                </div>
+              </div>
+              <div class="col-xs-11">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aspernatur deleniti eos esse explicabo
+                ipsam iste nihil nostrum porro praesentium quo repudiandae, saepe, sapiente. Accusamus ad atque
+                consequatur cum deleniti dignissimos dolor ducimus eligendi est ex explicabo laborum laudantium magnam
+                nesciunt placeat praesentium qui quia quos, sed ullam ut vero?
+              </div>
+            </div>
+            <hr/>
+            <div class="row">
+              <div class="col-xs-1 text-center">
+                <div class="row">
+                  <div class="col-md-12"><span class="glyphicon glyphicon-chevron-up glyphicon-big"></span></div>
+                </div>
+                <div class="row">
+                  <div class="col-md-12"><span class=""><h4>5</h4></span></div>
+                </div>
+                <div class="row">
+                  <div class="col-md-12"><span class="glyphicon glyphicon-chevron-down glyphicon-big"></span></div>
+                </div>
+              </div>
+              <div class="col-xs-11">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aspernatur deleniti eos esse explicabo
+                ipsam iste nihil nostrum porro praesentium quo repudiandae, saepe, sapiente. Accusamus ad atque
+                consequatur cum deleniti dignissimos dolor ducimus eligendi est ex explicabo laborum laudantium magnam
+                nesciunt placeat praesentium qui quia quos, sed ullam ut vero?
+              </div>
+            </div>
+            <hr/>
+            <div class="row">
+              <div class="col-xs-1 text-center">
+                <div class="row">
+                  <div class="col-md-12"><span class="glyphicon glyphicon-chevron-up glyphicon-big"></span></div>
+                </div>
+                <div class="row">
+                  <div class="col-md-12"><span class=""><h4>5</h4></span></div>
+                </div>
+                <div class="row">
+                  <div class="col-md-12"><span class="glyphicon glyphicon-chevron-down glyphicon-big"></span></div>
+                </div>
+              </div>
+              <div class="col-xs-11">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aspernatur deleniti eos esse explicabo
+                ipsam iste nihil nostrum porro praesentium quo repudiandae, saepe, sapiente. Accusamus ad atque
+                consequatur cum deleniti dignissimos dolor ducimus eligendi est ex explicabo laborum laudantium magnam
+                nesciunt placeat praesentium qui quia quos, sed ullam ut vero?
+              </div>
+            </div>
+            <hr/>
+          </div>
+        </div>
+
       </div>
 
-      <div class="col-md-3 col-sm-12" style="padding-top: 51px;">
+      <div class="col-md-3 col-sm-12">
         <div class="row">
           <div class="col-md-12">
             <div class="row">
@@ -120,7 +196,6 @@
         </div>
       </div>
     </div>
-
   </div>
   <!-- /.container -->
 
