--- a/nexus9k/templates/modules/footer.html
+++ b/nexus9k/templates/modules/footer.html
@@ -1,3 +1,55 @@
+<footer class="footer">
+  <div class="container">
+      <hr />
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="col-md-3">
+          <h4 class='nav-heading'>Learn</h4>
+          <ul class="nav nav-pills nav-stacked">
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Cisco Community</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3">
+          <h4 class='nav-heading'>Resource</h4>
+          <ul class="nav nav-pills nav-stacked">
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Article Center</a></li>
+            <li><a href="#">Scripts</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3">
+          <h4 class='nav-heading'>Expert Corner</h4>
+          <ul class="nav nav-pills nav-stacked">
+            <li><a href="#">Discussion</a></li>
+            <li><a href="#">Leaderboards</a></li>
+            <li><a href="#">MVP Program</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3">
+          <h4 class='nav-heading'>Legal</h4>
+          <ul class="nav nav-pills nav-stacked">
+            <li><a href="#">Terms of Use</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <hr>
+      <div class="row">
+          <div class="col-lg-12">
+              <ul class="nav nav-pills ">
+                  <li><a href="/">© 2015 Cisco, One Cloud Consulting</a></li>
+                  <li class="pull-right"><a href="#">Follow Us: </a></li>
+              </ul>
+          </div>
+      </div>
+  </div>
+</footer>
+
+
+{% comment %}
+
 <footer id="footer">
   <div class="content">
     <nav id="footer-nav" class="row">
@@ -33,4 +85,4 @@
       <div class="push-right"><div style="margin-bottom: 10px;"><a><i class="fa fa-globe" style="margin-right: 5px;"></i>English</a><br>Other languages coming soon.</div>© 2015 Cisco, One Cloud Inc.</div>
     </nav>
   </div>
-</footer>
+</footer>{% endcomment %}
