--- a/nexus9k/static/css/site.css
+++ b/nexus9k/static/css/site.css
@@ -41,3 +41,48 @@ hr{
 .main-content{
     margin-top:30px;
 }
+
+.jumbotron-background{
+    background: url('../img/earth.jpg');
+    background-size:100% 100%;
+}
+
+.text-white{
+    color: #fff;
+}
+
+.container{
+    max-width:980px;
+}
+
+.panel-google-plus {
+    border: 1px solid rgb(216, 216, 216);
+    font-family: 'Roboto', sans-serif;
+}
+
+.panel-google-plus > .panel-heading,
+.panel-google-plus > .panel-footer {
+    background-color: rgb(255, 255, 255);
+    border-width: 0px;
+}
+.panel-google-plus > .panel-heading {
+    margin-top: 20px;
+    padding-bottom: 5px;
+}
+.panel-google-plus > .panel-heading > img {
+    margin-right: 15px;
+}
+.panel-google-plus > .panel-heading > h3 {
+    margin: 0px;
+    font-size: 14px;
+    font-weight: 700;
+}
+.panel-google-plus > .panel-heading > h5 {
+    color: rgb(153, 153, 153);
+    font-size: 12px;
+    font-weight: 400;
+}
+.panel-google-plus > .panel-body {
+    padding-top: 5px;
+    font-size: 13px;
+}
