--- a/nexus9k/templates/modules/footer.html
+++ b/nexus9k/templates/modules/footer.html
@@ -40,49 +40,17 @@
           <div class="col-lg-12">
               <ul class="nav nav-pills ">
                   <li><a href="/">© 2015 Cisco, One Cloud Consulting</a></li>
-                  <li class="pull-right"><a href="#">Follow Us: </a></li>
+                  <li class="pull-right">Follow Us:
+                     <span>
+                      <a href="#"><i class="fa fa-twitter-square"></i></a>
+                      <a href="#"><i class="fa fa-facebook-official"></i></a>
+                      <a href="#"><i class="fa fa-google-plus-square"></i></a>
+                      <a href="#"><i class="fa fa-github"></i></a>
+                    </span>
+                  </li>
               </ul>
           </div>
       </div>
   </div>
 </footer>
 
-
-{% comment %}
-
-<footer id="footer">
-  <div class="content">
-    <nav id="footer-nav" class="row">
-      <div>
-        <h2>About</h2>
-        <ul>
-          <li><a href="#">Get Started</a></li>
-          <li><a href="#">Why Nexus9k</a></li>
-        </ul>
-      </div>
-      <div>
-        <h2>Learn</h2>
-        <ul>
-          <li><a href="#">Get Started</a></li>
-          <li><a href="#">Articles</a></li>
-          <li><a href="#">Script Center</a></li>
-        </ul>
-      </div>
-      <div>
-        <h2>Developers</h2>
-        <ul>
-          <li><a href="#">Contribute</a></li>
-          <li><a href="#">Get Help</a></li>
-        </ul>
-      </div>
-      <div>
-        <h2>Support</h2>
-        <ul>
-          <li><a href="#">Ask the Community</a></li>
-          <li><a href="#">Documentation</a></li>
-        </ul>
-      </div>
-      <div class="push-right"><div style="margin-bottom: 10px;"><a><i class="fa fa-globe" style="margin-right: 5px;"></i>English</a><br>Other languages coming soon.</div>© 2015 Cisco, One Cloud Inc.</div>
-    </nav>
-  </div>
-</footer>{% endcomment %}
