--- a/nexus9k/templates/home.html
+++ b/nexus9k/templates/home.html
@@ -5,13 +5,13 @@
 {% block meta-description %}Cisco Nexus 9000 Series Community{% endblock %}
 
 {% block content %}
-  <div class="jumbotron jumbotron-background">
+  <div class="jumbotron jumbotron-nex">
     <div class="container">
       <h3 class="text-white">Welcome to the Community. </h3>
       <h4 class="text-white">Get started by reading some articles or jump right into discussions.</h4>
     </div>
-
   </div>
+
   <div class="container">
     <div class="row">
       <!-- Featured Articles -->
