added url for home page

--- a/nexus9k/templates/modules/header.html
+++ b/nexus9k/templates/modules/header.html
@@ -10,7 +10,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
         <img src="{% static 'img/cisco-logo.png' %}" alt="Cisco logo" title="Go Home">
         <span style="padding: 0 10px 0 10px;">Nexus 9000</span>
       </a>
