Created ui for article center.

--- a/nexus9k/static/css/site.css
+++ b/nexus9k/static/css/site.css
@@ -81,10 +81,6 @@ hr{
     color: #fff;
 }
 
-.container{
-    max-width:980px;
-}
-
 .panel-google-plus {
     border: 1px solid rgb(216, 216, 216);
     font-family: 'Roboto', sans-serif;
@@ -115,4 +111,9 @@ hr{
 .panel-google-plus > .panel-body {
     padding-top: 5px;
     font-size: 13px;
+}
+
+.avatar{
+    float:left;
+    margin: 10px 10px 10px 0px;
 }
