--- a/nexus9k/templates/modules/header.html
+++ b/nexus9k/templates/modules/header.html
@@ -20,7 +20,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="#">Products</a></li>
-        <li><a href="#">Article Center</a></li>
+        <li><a href="{% url 'articles' %}">Article Center</a></li>
         <li><a href="#">Scripts</a></li>
         <li><a href="{% url 'questions' %}">Discussion</a></li>
         <li><a href="#">Export Corner</a></li>
